--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                 <img src="image/pic-2.png" alt="">
                 <p>Lorem ipsum dolor sit amet consectetur,
                      adipisicing elit. Molestiae dolores enim quam eius sed
-                     sint veniam tempora modi odit quisquam.</p>
+                     sint veniam tempora modi  quisquam.</p>
                      <h3>john deo</h3>
                      <div class="stars">
                         <i class="fas fa-star"></i>
